@@ -6,4 +6,4 @@ INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include
 
 noinst_LTLIBRARIES = libtest.la
 
-libtest_la_SOURCES = testsuite.cc
+libtest_la_SOURCES = testsuite.cc testutils.cc
